[gd_scene load_steps=7 format=3 uid="uid://brtsijxypeeo5"]

[ext_resource type="Script" path="res://Scripts/UI/LevelSelectorNew.gd" id="1_64jrb"]
[ext_resource type="Theme" uid="uid://dylriqvd0gggf" path="res://game_main_theme.tres" id="1_qlfbf"]
[ext_resource type="PackedScene" uid="uid://44b3lqo4rfge" path="res://Scenes/UIComponents/TweenableButton.tscn" id="2_pyfpb"]
[ext_resource type="PackedScene" uid="uid://bocdjbhql8qcn" path="res://Scenes/BlockLevels/World.tscn" id="2_qnmrt"]
[ext_resource type="PackedScene" uid="uid://gfx6r6lnobro" path="res://Scenes/UIComponents/AnimatedLabel.tscn" id="3_ky1qw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyj3q"]
bg_color = Color(0, 0.094, 0.271, 0.345)

[node name="LevelSelectorNew" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qlfbf")
theme_override_styles/panel = SubResource("StyleBoxFlat_hyj3q")
script = ExtResource("1_64jrb")
scene_to_load = ExtResource("2_qnmrt")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(650, 400)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -211.5
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qlfbf")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_qlfbf")
theme_override_constants/separation = 15
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qlfbf")
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 125

[node name="ExitButton" parent="PanelContainer/VBoxContainer/VBoxContainer/MarginContainer" instance=ExtResource("2_pyfpb")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../LevelFeaturesContainer/NextLevelBoxContainer/NextLevelButton")
text = "X"

[node name="LevelFeaturesContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PreviousLevelBoxContainer" type="BoxContainer" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PreviousLevelButton" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/PreviousLevelBoxContainer" instance=ExtResource("2_pyfpb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../../../VBoxContainer/MarginContainer/ExitButton")
focus_neighbor_right = NodePath("../../NextLevelBoxContainer/NextLevelButton")
focus_neighbor_bottom = NodePath("../../../VBoxContainer2/MarginContainer/EnterGame")
focus_next = NodePath("../../NextLevelBoxContainer/NextLevelButton")
focus_previous = NodePath("../../../VBoxContainer/MarginContainer/ExitButton")
text = "<"
from_center = false

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qlfbf")
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
theme = ExtResource("1_qlfbf")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qlfbf")

[node name="LevelName" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_ky1qw")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 49
text = "Level Name"
horizontal_alignment = 1
visible_characters = -1
visible_ratio = 1.0
animate_on_ready = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qlfbf")

[node name="LevelSize" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_ky1qw")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 39
text = "Grid Size
"
horizontal_alignment = 1
visible_characters = -1
visible_ratio = 1.0
animate_on_ready = true

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qlfbf")

[node name="QuadrantsHealth" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_ky1qw")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 39
text = "Quadrant's Health"
horizontal_alignment = 1
visible_characters = -1
visible_ratio = 1.0
animate_on_ready = true

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qlfbf")

[node name="BlockCoreHealth" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_ky1qw")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 39
text = "Block core health"
horizontal_alignment = 1
visible_characters = -1
visible_ratio = 1.0
animate_on_ready = true

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qlfbf")

[node name="NextLevelBoxContainer" type="BoxContainer" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="NextLevelButton" parent="PanelContainer/VBoxContainer/LevelFeaturesContainer/NextLevelBoxContainer" instance=ExtResource("2_pyfpb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../../PreviousLevelBoxContainer/PreviousLevelButton")
focus_neighbor_top = NodePath("../../../VBoxContainer/MarginContainer/ExitButton")
focus_neighbor_bottom = NodePath("../../../VBoxContainer2/MarginContainer/EnterGame")
focus_next = NodePath("../../../VBoxContainer2/MarginContainer/EnterGame")
focus_previous = NodePath("../../PreviousLevelBoxContainer/PreviousLevelButton")
text = ">"
from_center = false

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_qlfbf")
theme_override_constants/margin_bottom = 20

[node name="EnterGame" parent="PanelContainer/VBoxContainer/VBoxContainer2/MarginContainer" instance=ExtResource("2_pyfpb")]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../../../LevelFeaturesContainer/NextLevelBoxContainer/NextLevelButton")
text = "Enter Game"

[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/MarginContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/LevelFeaturesContainer/PreviousLevelBoxContainer/PreviousLevelButton" to="." method="_on_previous_level_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/LevelFeaturesContainer/NextLevelBoxContainer/NextLevelButton" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer2/MarginContainer/EnterGame" to="." method="_on_enter_game_pressed"]
